# chromiumos-third_party-mediatek-datool

./: CMakeLists.txt  COPYING  Makefile  README  fbtool.c
cmds/: send_da.c  start_cmd.c
da_cmds/: CMakeLists.txt  download_helper.c  get_hw_code.c  get_target_config.c  helpers.c  jump_da.c  send_auth.c  send_da.c  start_cmd.c
da_cmds/inc/: da_cmds.h
da_stage2/: CMakeLists.txt  lib.c
da_stage2/inc/: da_stage2.h
inc/: tty_usb.h
libmtkparse/: CMakeLists.txt  helpers.c  parsers.c  printers.c
libmtkparse/inc/: mtkparse.h
tool/: CMakeLists.txt  chksum.c  convert_scatter.py  datool.c
utils/: CMakeLists.txt  tty_usb_common.c
utils/inc/: file_util.h
